--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+body {
+  background: linear-gradient(
+    38deg,
+    rgba(56, 39, 112, 1) 0%,
+    rgba(0, 112, 255, 1) 50%,
+    rgba(65, 159, 145, 1) 100%
+  );
+  font-family: "Poppins", "Noto-Sans", Arial, Helvetica, sans-serif;
+  color: #fff;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+}
+
+.menu,
+.quiz {
+  min-width: 500px;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  color: #000000;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.menu button,
+.quiz button {
+  outline: 0;
+  border: none;
+  width: 250px;
+  height: 70px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 600;
+  font-family: "Poppins";
+  box-shadow: inset 0 0 0 0 #54b3d6;
+  color: #000000;
+  margin: 0 -0.25rem;
+  padding: 0 0.25rem;
+  transition: color 0.8s ease-in-out, box-shadow 0.8s ease-in-out;
+}
+
+.menu button:hover,
+.quiz button:hover {
+  box-shadow: inset 300px 0 0 0 #54b3d6;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px 5px;
+  border-bottom: 2px solid #999;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.options button {
+  margin-bottom: 10px;
+}
+
+.quiz .nextBtn {
+  width: 120px;
+  font-size: 15px;
+  margin: 15px 0;
 }
